<resources>
    <string name="app_name">devPlacement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owners">Owners</string>
    <string name="users">Users</string>
    <string name="filter_str">filter</string>
    <string name="color_str">Color : </string>
    <string name="year_str">Year : </string>
    <string name="brand_str">Brand</string>
    <string name="country_str">Country : </string>
    <string name="gender_str">Gender : </string>
    <string name="job_str">Job : </string>
    <string name="email_str">Email : </string>
    <string name="bio_str">Bio :</string>
    <string name="user_details_str">User Details</string>
    <string name="john_doe_str">John Doe</string>
    <string name="male_str">Male</string>
    <string name="user_details_title_str">User details</string>
    <string name="back_arrow_description">back arrow to user screen</string>
    <string name="joseph_mary_str">Joseph Mary</string>
    <string name="date_created_str">O1-Mar-2020</string>
    <string name="female_str">Female</string>
    <string name="color_all_str">Color(s)</string>
    <string name="colors_str">green, red, yellow</string>
    <string name="download_data_str">Downloading neccessary data...</string>
    <string name="countries_str">Countries</string>
    <string name="filter_title_str">Filter</string>
    <string name="network_failure_str">Ooops...check your network connection</string>
    <string name="retry_str">Retry</string>
</resources>