<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:contentPadding="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/car_owner_image_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:elevation="6dp"
            android:layout_margin="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/car_owner_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_launcher_foreground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/car_owner_brand_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/car_owner_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/primary_color_100"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Toyota" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/car_owner_first_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:textColor="@color/primary_color_100"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/car_owner_image_cv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Joseph" />

        <TextView
            android:id="@+id/car_owner_last_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color_100"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/car_owner_first_name_tv"
            app:layout_constraintBottom_toBottomOf="@+id/car_owner_first_name_tv"
            app:layout_constraintStart_toEndOf="@id/car_owner_first_name_tv"
            tools:text="Winner" />


        <TextView
            android:id="@+id/car_owner_brand_year_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_str"
            android:textStyle="bold"
            android:textColor="@color/primary_color_100"
            app:layout_constraintStart_toStartOf="@id/car_owner_brand_gender_title_tv"
            app:layout_constraintTop_toBottomOf="@id/car_owner_brand_gender_title_tv"
             />

        <TextView
            android:id="@+id/car_owner_brand_year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/car_owner_brand_year_title_tv"
            app:layout_constraintTop_toTopOf="@id/car_owner_brand_year_title_tv"
            app:layout_constraintBottom_toBottomOf="@id/car_owner_brand_year_title_tv"
            tools:text="1995" />

        <TextView
            android:id="@+id/car_owner_brand_color_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_str"
            android:textStyle="bold"
            android:textColor="@color/primary_color_100"
            app:layout_constraintStart_toStartOf="@+id/car_owner_brand_gender_title_tv"
            app:layout_constraintTop_toBottomOf="@id/car_owner_brand_year_title_tv" />

        <TextView
            android:id="@+id/car_owner_brand_color_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/car_owner_brand_color_title_tv"
            app:layout_constraintStart_toEndOf="@+id/car_owner_brand_color_title_tv"
            app:layout_constraintTop_toTopOf="@+id/car_owner_brand_color_title_tv"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/car_owner_brand_gender_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/primary_color_100"
            android:text="@string/gender_str"
            app:layout_constraintStart_toEndOf="@id/car_owner_image_cv"
            app:layout_constraintTop_toBottomOf="@+id/car_owner_first_name_tv" />

        <TextView
            android:id="@+id/car_owner_job_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_str"
            android:textStyle="bold"
            android:textColor="@color/primary_color_100"
            app:layout_constraintStart_toStartOf="@+id/car_owner_brand_country_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/car_owner_brand_country_title_tv" />

        <TextView
            android:id="@+id/car_owner_country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/car_owner_brand_country_title_tv"
            app:layout_constraintTop_toTopOf="@id/car_owner_brand_country_title_tv"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/car_owner_brand_country_title_tv"
            tools:layout_editor_absoluteY="86dp"
            tools:text="Nigeria" />

        <TextView
            android:id="@+id/car_owner_gender_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/car_owner_brand_gender_title_tv"
            app:layout_constraintTop_toTopOf="@id/car_owner_brand_gender_title_tv"
            app:layout_constraintBottom_toBottomOf="@id/car_owner_brand_gender_title_tv"
            tools:text="Female" />

        <TextView
            android:id="@+id/car_owner_job_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/car_owner_job_title_tv"
            app:layout_constraintStart_toEndOf="@+id/car_owner_job_title_tv"
            app:layout_constraintTop_toTopOf="@+id/car_owner_job_title_tv"
            tools:text="Operator" />

        <TextView
            android:id="@+id/car_owner_email_address_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_str"
            android:textStyle="bold"
            android:textColor="@color/primary_color_100"
            app:layout_constraintStart_toStartOf="@+id/car_owner_job_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/car_owner_job_title_tv" />

        <TextView
            android:id="@+id/car_owner_email_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/car_owner_email_address_title_tv"
            app:layout_constraintStart_toEndOf="@id/car_owner_job_title_tv"
            app:layout_constraintTop_toTopOf="@id/car_owner_email_address_title_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="dfriesc@arizona.edu" />

        <TextView
            android:id="@+id/car_owner_bio_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio_str"
            android:textStyle="bold"
            android:textColor="@color/primary_color_100"
            app:layout_constraintStart_toStartOf="@+id/car_owner_email_address_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/car_owner_email_address_title_tv" />

        <TextView
            android:id="@+id/car_owner_bio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@id/car_owner_bio_title_tv"
            app:layout_constraintTop_toTopOf="@id/car_owner_bio_title_tv"
            app:layout_constraintStart_toEndOf="@+id/car_owner_bio_title_tv"
            tools:layout_editor_absoluteY="144dp"
            tools:text="Maecenas pulvinar lobortis est." />

        <TextView
            android:id="@+id/car_owner_brand_country_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_str"
            android:textColor="@color/primary_color_100"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/car_owner_brand_color_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/car_owner_brand_color_title_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>